feat(image details): add exif summary
Refs: IS-10

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1,4 +1,12 @@
 {
-    "home": {
-    }
+  "common": {
+    "close": "Close"
+  },
+  "exif": {
+    "artist": "Artist",
+    "createDate": "Date",
+    "dimensions": "Dimensions"
+  },
+  "home": {
+  }
 }
