--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -1,4 +1,12 @@
 {
-    "home": {
-    }
+  "common": {
+    "close": "Fermer"
+  },
+  "exif": {
+    "artist": "Artiste",
+    "createDate": "Date",
+    "dimensions": "Dimensions"
+  },
+  "home": {
+  }
 }
