feat(image details): add camera and parameters details
Refs: IS-10

--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -2,11 +2,14 @@
   "common": {
     "close": "Fermer"
   },
-  "exif": {
-    "artist": "Artiste",
-    "createDate": "Date",
-    "dimensions": "Dimensions"
-  },
-  "home": {
+  "image-details": {
+    "exif": {
+      "artist": "Artiste",
+      "createDate": "Date",
+      "dimensions": "Dimensions"
+    },
+    "camera-settings": "Appareil et paramètres",
+    "unknown-camera": "Appareil inconnu",
+    "view-exif": "Afficher l'EXIF complet"
   }
 }
