--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2,11 +2,14 @@
   "common": {
     "close": "Close"
   },
-  "exif": {
-    "artist": "Artist",
-    "createDate": "Date",
-    "dimensions": "Dimensions"
-  },
-  "home": {
+  "image-details": {
+    "exif": {
+      "artist": "Artist",
+      "createDate": "Date",
+      "dimensions": "Dimensions"
+    },
+    "camera-settings": "Camera & Settings",
+    "unknown-camera": "Unknown camera",
+    "view-exif": "View full EXIF"
   }
 }
